@@ -1,8 +1,10 @@
 -------------------------- aqp 0.99-8 (2011-09-14) --------------------------
 * soil.slot() will now accept boundaries defining a 'slab' over which aggregates are computed
-* soil.slot.multiple() now cleanly wraps soil.slot(), accepting all of the same arguments
+* soil.slot.multiple() now cleanly wraps soil.slot(), accepting all arguments
   - these two changes make it possible to ask: 
-    "what is the wt-mean value of some property within this slab, and among these groups?"
+    "what is the wt. mean value of some property within this slab, and among these groups?"
+  - soil.slot.multiple() now uses a formula interface: NOTE that this will break existing scripts (sorry)
+    
 -------------------------- aqp 0.99-7 (2011-09-01) --------------------------
 * new functions for getting data out of PedonPC (MS Access) databases [windows only for now]
   - get_site_data_from_pedon_db() : site and pedon aggregate data
@@ -13,6 +15,7 @@
 * test_hz_logic() : basic function for testing horizon logic, returns TRUE/FALSE by ID
 * parallel operations now NON-functional, while we wait for plyr to support doSMP...
 * new ID plotting style for profile_plot() : handy when plotting large collections and/or long IDs
+
 -------------------------- aqp 0.99-4 (2011-08-15) --------------------------
 * code and documentation clean-up
 * Soil Sata Access (SDA) query functions have been added
